<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ui.addFragment">
<LinearLayout
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"

        android:gravity="center"
        android:text="@string/player"
        android:textColor="@color/Crimson"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="Reproductor de audio" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/title"
        android:textColor="@color/Crimson"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertTitle"
        app:cornerRadius="8dp"
        android:layout_marginTop="5dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTitle"
            app:cornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/url"
        android:textColor="@color/Crimson"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertUrl"
        app:cornerRadius="8dp"
        android:layout_marginTop="5dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUrl"
            app:cornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect" />


    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_gravity="center">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/WhiteSmoke"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

    </RelativeLayout>


</LinearLayout>


</RelativeLayout>