<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SongDetailFragment">

    <LinearLayout
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/player"
            android:textColor="@color/Crimson"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Reproductor de audio" />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:textColor="@color/LightGrey"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Reproductor de audio" />
        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:textColor="@color/LightGrey"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Reproductor de audio" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/pause"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"


                android:padding="10dp"
                android:src="@drawable/ic_baseline_pause_circle_outline_24"
                />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                android:src="@drawable/ic_baseline_play_circle_outline_24" />

            <ImageButton
                android:id="@+id/stop"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_stop_circle_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />


        </LinearLayout>
        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cool_button"
        android:layout_width="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cool_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/back"
            android:textColor="@color/Crimson"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>